--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     url: jdbc:mysql://localhost:33067/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: ''
-    druid:
-      validation-query: select 1
-      test-on-borrow: false
+#    druid:
+#      validation-query: select 1
+#      test-on-borrow: false
 
 eureka:
   client:
@@ -20,7 +20,7 @@ eureka:
     fetchRegistry: true #是否从注册中心抓取已有的注册信息 默认true，集群必须设置为true
     service-url:
       #      设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-#      defaultZone: http://localhost:7001/eureka #单机版
+      #      defaultZone: http://localhost:7001/eureka #单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群版
 mybatis:
   mapper-locations: classpath:mapper/*.xml
